<resources>
    <string name="app_name">PortalAcademico</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>


    <string name="login_tv_matricula">Registration</string>
    <string name="login_tv_pass">Password</string>
    <string name="login_btn_login">Login</string>
    <string name="login_btn_primeiro">First Access</string>

    <string name="login_cad_tela_name">Cadastro Aluno</string>
    <string name="login_cad_tv_nome">Name</string>
    <string name="login_cad_tv_Email">E-Mail</string>
    <string name="login_cad_tv_senha">Password</string>
    <string name="login_cad_tv_senha_confirma">Repeat Password</string>
    <string name="login_cad_btn_cadastrar">Save</string>
    <string name="login_cad_btn_cancelar">Cancel</string>
    <string name="title_activity_maps">Map</string>


</resources>
