<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">



    <FrameLayout
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:id="@+id/frameLayout">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/ImgV_Idusuario"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:src="@color/colorWhite"
            android:rotation="-90"/>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/login_cad_IdCamera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            app:backgroundTint="@color/colorBlack"
            app:fabSize="mini"
            app:srcCompat="@drawable/ic_add_white_24dp" />

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/perfil_tv_IdNone_faculdade"
            android:text="Faculdade"
            android:textColor="@color/colorBlack"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="130dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"/>
        <TextView
            android:id="@+id/perfil_tv_IdNome"
            android:text="Nome"
            android:visibility="gone"
            android:textColor="@color/colorBlack"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="130dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/frameLayout">





        <LinearLayout
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:text="@string/login_cad_tv_nome"
                android:textColor="@color/colorWhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/perfil_Edt_IdNome"
                android:backgroundTint="@color/colorWhite"
                android:inputType="textCapWords"
                android:imeOptions="actionNext"
                android:maxLines="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/login_cad_tv_Email"
                android:textColor="@color/colorWhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/perfil_Edt_IdEmail"
                android:backgroundTint="@color/colorWhite"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/login_cad_tv_senha"
                android:textColor="@color/colorWhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/perfil_Edt_IdSenha"
                android:backgroundTint="@color/colorWhite"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:maxLength="50"
                android:maxLines="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/login_cad_tv_senha_confirma"
                android:textColor="@color/colorWhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/perfil_Edt_IdSenhaConfirma"
                android:backgroundTint="@color/colorWhite"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLength="50"
                android:maxLines="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_Idcancel"
                android:text="@string/login_cad_btn_cancelar"
                android:background="@color/colorRead"
                android:textColor="@color/colorWhite"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/btn_IdSave"
                android:text="@string/login_cad_btn_cadastrar"
                android:background="@color/colorBlack"
                android:textColor="@color/colorWhite"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>



    </LinearLayout>


</RelativeLayout>
