<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context="br.com.vambersson.portalacademico.activity.login.LoginPrimeiroAcesso">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <FrameLayout
                android:layout_width="130dp"
                android:layout_height="wrap_content">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/login_cad_IdimageView"
                    android:layout_width="110dp"
                    android:layout_height="160dp"
                    android:layout_gravity="center_horizontal"
                    android:rotation="-90"
                    android:src="@mipmap/ic_launcher"/>

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/login_cad_IdCamera"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|bottom"
                    app:backgroundTint="@color/colorRead"
                    app:fabSize="mini"
                    app:srcCompat="@drawable/ic_menu_camera_white" />


            </FrameLayout>


            <TextView
                android:id="@+id/login_Id_Cad_Matricula"
                android:layout_marginTop="75dp"
                android:layout_marginLeft="50dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Matrícula"
                android:textColor="@color/colorWhite" />

        </LinearLayout>

        <LinearLayout
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:text="@string/login_cad_tv_nome"
                android:textColor="@color/colorWhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/login_Id_Cad_Nome"
                android:backgroundTint="@color/colorWhite"
                android:imeOptions="actionNext"
                android:maxLines="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/login_cad_tv_senha"
                android:textColor="@color/colorWhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/login_Id_Cad_Senha"
                android:backgroundTint="@color/colorWhite"
                android:maxLines="1"
                android:imeOptions="actionDone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/login_cad_tv_senha_confirma"
                android:textColor="@color/colorWhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/login_Id_Cad_Senha_Confirma"
                android:backgroundTint="@color/colorWhite"
                android:maxLines="1"
                android:imeOptions="actionDone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal">

            <Button
                android:text="@string/login_cad_btn_cancelar"
                android:background="@color/colorRead"
                android:textColor="@color/colorWhite"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/login_cad_IdSave"
                android:text="@string/login_cad_btn_cadastrar"
                android:background="@color/colorBlack"
                android:textColor="@color/colorWhite"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>



    </LinearLayout>














</ScrollView>
